# sCalculator

./: .gitignore  CMakeLists.txt  clangd
.cache/clangd/index/: binary.cpp.441E1A4940B9B1CE.idx  binary.cpp.63DEE3271A2E8C16.idx  binary.cpp.F2777081487DD8C1.idx  binary.hpp.15BBE9071CA33168.idx  binary.hpp.9F9CBF1BA1432B8E.idx  binary.hpp.BDB5FBACAE7897C9.idx  eventHandler.cpp.80B508E8ED6CCC40.idx  eventHandler.cpp.A4E6A58BE5115E84.idx  eventHandler.hpp.C92E68CA8938FF3C.idx  eventHandler.hpp.F768A78FD712135B.idx  main.cpp.0019EC3E22D329B8.idx  main.cpp.3532BB3A0106F877.idx
include/: binary.hpp
include/binary/: binary.hpp
include/eventHandler/: eventHandler.hpp
src/: binary.cpp  main.cpp
src/binary/: binary.cpp
src/eventHandler/: eventHandler.cpp
